# booking-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2be39b6b277f_create_auth_tables.py  8a0f6c2c4b3d_add_audit_logs.py
app/: main.py
app/core/: config.py  database.py  db_metadata.py  exceptions.py  models.py  redis.py  security.py
app/modules/auth/: deps.py  email.py  enums.py  models.py  repository.py  routes.py  schemas.py  seed_owner.py  service.py
docs/: DESIGN.md  README.md
tests/: test_smoke.py
tests/unit/: test_security.py
